# solx

./: .gitignore  .gitmodules  Cargo.toml  README.md  deny.toml  global  install-solx  versions.json
.cargo/: config.toml
.github/: deploy-docs.yaml  forge-benchmarks.toml  hardhat-projects.toml  release.yaml
0.1.0-alpha.3/: 02-command-line-interface.html  03-standard-json.html  index.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
bytecode/: art-gobblers.html  balance-snapshot.html  beefy.html  diamond-foundry.html  diamonds.html  forge-std.html  foundry-upgrades.html  gov-of-venice.html  index.html  lil-web3.html  maple-erc20.html  openzeppelin.html  playpen.html  prb-math.html  rollcall.html  solady.html  solmate.html  tokenlon.html  uniswap-v4.html  unix.html
dashboard-0.1.0-alpha.4/: build.js
solx/: Cargo.toml
solx-benchmark-converter/: Cargo.toml
solx-codegen-evm/: Cargo.toml
solx-compiler-downloader/: Cargo.toml  solc-bin-llvm.json
solx-compiler-downloader/src/config/: compiler_list.rs  mod.rs
solx-core/: Cargo.toml
solx-evm-assembly/: Cargo.toml
solx-llvm-builder/: Cargo.toml
solx-llvm-builder/src/: build_type.rs  lib.rs  llvm_path.rs  lock.rs  utils.rs
solx-llvm-builder/src/solx_llvm_builder/: arguments.rs  main.rs
solx-solc/: Cargo.toml
solx-solc-test-adapter/: Cargo.toml
solx-solc-test-adapter/src/: lib.rs
solx-solc-test-adapter/src/solx_solc_test_updater/: arguments.rs  main.rs
solx-solc-test-adapter/src/test/: mod.rs
solx-solc-test-adapter/src/test/function_call/: mod.rs
solx-solc-test-adapter/src/test/function_call/parser/lexical/stream/word/: tests.rs
solx-solc-test-adapter/src/test/function_call/parser/lexical/token/lexeme/: keyword.rs
solx-solc-test-adapter/src/test/function_call/parser/syntax/parser/: call.rs  event.rs  gas.rs  literal.rs  value.rs
solx-solc-test-adapter/src/test/function_call/parser/syntax/parser/type/: mod.rs  tuple.rs
solx-solc-test-adapter/src/test/function_call/parser/syntax/tree/literal/: alignment.rs  boolean.rs  hex.rs  integer.rs  string.rs
solx-standard-json/: Cargo.toml
solx-tester/: Cargo.toml
solx-utils/: Cargo.toml
solx-yul/: Cargo.toml
(+824 files in other folders)
