[workspace]
members = [
    "solx",
    "solx-solc",
    "solx-standard-json",
    "solx-evm-assembly",
    "solx-yul",
    "solx-codegen-evm",
    "solx-utils",
]
resolver = "2"

[workspace.package]
authors = [
    "The Matter Labs Team <hello@matterlabs.dev>",
]
edition = "2021"
version = "0.1.3"
