[package]
name = "solx-compiler-downloader"
authors.workspace = true
edition.workspace = true
version.workspace = true
description = "Auxiliary compiler downloader for solx"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
colored = "3.0"
serde = { version = "1.0", "features" = [ "derive" ] }
serde_json = { version = "1.0", features = [ "arbitrary_precision" ] }

reqwest = { version = "0.12", features = ["blocking", "json"] }
