[package]
name = "solx-llvm-builder"
authors.workspace = true
edition.workspace = true
version.workspace = true
description = "LLVM framework builder for solx"
license = "MIT OR Apache-2.0"

[[bin]]
name = "solx-llvm"
path = "src/solx_llvm_builder/main.rs"

[lib]
doctest = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
toml = "0.8"

fs_extra = "1.3"
path-slash = "0.2"
regex = "1.11"
